--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# Starter Content
+Content/StarterContent/*
+
 # Visual Studio 2015 user specific files
 .vs/
 
@@ -50,7 +54,6 @@ SourceArt/**/*.tga
 
 # Binary Files
 Binaries/*
-Plugins/*/Binaries/*
 
 # Builds
 Build/*
@@ -71,7 +74,9 @@ Saved/*
 
 # Compiled source files for the engine to use
 Intermediate/*
-Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+#Fbx exports
+ContentSource/*
