--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -52,12 +52,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftStick_Up)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_LeftStick_Down)
-+AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_RightStick_Right)
-+AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_RightStick_Left)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_LeftTriggerAxis)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_FaceButton_Bottom)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_FaceButton_Right)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_DPad_Left)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_DPad_Right)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
